En este commit, he han realizado cambios tales como crear un nuevo struct que funciona afuera del main para que se puedan ejecutar los loops afuera del main y asi solo poder llamarlo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "cctype": "cpp"
+        "cctype": "cpp",
+        "fstream": "cpp",
+        "iostream": "cpp"
     }
 }
